<resources>
    <string name="app_name">SideDeck</string>

    <!--Key strings go here-->
    <string name="KEYplayerOneDefaultNameSetting" translatable="false">KEYplayerOneDefaultNameSetting</string>
    <string name="KEYplayerTwoDefaultNameSetting" translatable="false">KEYplayerTwoDefaultNameSetting</string>
    <string name="KEYsoundOnOff" translatable="false">KEYsoundOnOff</string>
    <string name="KEYdefaultLpSetting" translatable="false">KEYdefaultLpSetting</string>
    <string name="KEYamoledNightModeSetting" translatable="false">KEYamoledNightModeSetting</string>
    <string name="KEYhasUserRatedAppYet" translatable="false">KEYhasUserRatedAppYet</string>
    <string name="KEYlaunchWhenUserPressedRemind" translatable="false">KEYlaunchWhenUserPressedRemind</string>

    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="diceRoll">Dice Roll</string>
    <string name="coinHeads">Heads</string>
    <string name="coinsTails">Tails</string>
    <string name="coinFlip">Coin Flip</string>
    <string name="turn1">"Turn\n1"</string>
    <string name="turn">"Turn\n"</string>
    <string name="logTurn">Turn</string>
    <string name="turnColon">"Turn: "</string>
    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="defaultLifepoints">Default Life Points</string>
    <string name="playerOneDefaultName">Player 1 default name</string>
    <string name="playerTwoDefaultName">Player 2 default name</string>
    <string name="sound">Sound</string>
    <string name="lpAddedTo">" LP added to "</string>
    <string name="lpSubtracedFrom">" LP subtracted from "</string>
    <string name="x" translatable="false">x</string>
    <string name="blankSpace" translatable="false">" "</string>
    <string name="duelLog">Duel Log</string>
    <string name="calculator">Life Points</string>
    <string name="quickCalc">Calculator</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8255332778135768/4126997531</string>
    <string name="test_banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="amoledBlackTheme">AMOLED Black theme</string>
    <string name="amoledBlackThemeSummary">Reduces battery consumption on AMOLED display devices</string>
    <string name="gotIt">Got it!</string>
    <string name="clearButtonTutorialMessage">You can tap on the number to clear it</string>


    <string name="rateMe">Rate Me!</string>
    <string name="noThanksAndDoNotAskAgain">No Thanks and Do Not Ask Me Again</string>
    <string name="remindMeLater">Remind Me Later</string>
    <string name="playStoreMarketLink" translatable="false">"market://details?id=</string>
    <string name="playStoreHttpLink" translatable="false">http://play.google.com/store/apps/details?id=</string>
    <string name="rateMeText">If you like SideDeck, please rate it on the Google Play Store!</string>
    <string name="enjoyingSidedeck">Enjoying SideDeck?</string>
    <string name="yes">Yes!</string>
    <string name="notReally">Not really.</string>
    <string name="giveFeedback">Would you mind giving us some feedback?</string>
    <string name="okSure">Ok, sure.</string>
    <string name="mailTo" translatable="false">mailto:outplaysoftworks@gmail.com?subject=SideDeck%20Feedback</string>
    <string name="noThanks">No, thanks.</string>

    <string name="TutorialMessage1">When you enter a number, it will appear here.  Simply tap the number to clear your entry</string>
    <string name="TutorialMessage2">Whenever you perform actions, they will be grouped by turn in the duel log. Tap this button to increase the turn, and long-press it to decrease the turn</string>
    <string name="TutorialMessage3">Press the menu button to find the Reset, Calculator, and Settings buttons.  You may want to go ahead and change your default name in the Settings</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="Resetting">Resetting</string>
    <string name="Cancel">Cancel</string>
</resources>
