<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
     android:layout_width="match_parent">
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/KEYsoundOnOff"
        android:title="@string/sound"/>
<!--    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/KEYamoledNightModeSetting"
        android:title="@string/amoledBlackTheme"
        android:summary="@string/amoledBlackThemeSummary"/>-->
    <EditTextPreference
        android:defaultValue="@string/playerOne"
        android:key="@string/KEYplayerOneDefaultNameSetting"
        android:title="@string/playerOneDefaultName"
        android:summary="@string/playerOne"/>
    <EditTextPreference
        android:defaultValue="@string/playerTwo"
        android:key="@string/KEYplayerTwoDefaultNameSetting"
        android:title="@string/playerTwoDefaultName"
        android:summary="@string/playerTwo"/>
    <EditTextPreference
        android:defaultValue="8000"
        android:key="@string/KEYdefaultLpSetting"
        android:summary="8000"
        android:title="@string/defaultLifepoints"
        android:digits="1234567890"
        android:maxLength="6"/>


</PreferenceScreen>